# squidrouter-py

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
docs/: api.md  index.md
examples/: async_quickstart.py  quickstart.py
search/: search_index.json
src/squidrouter/: __init__.py  _base.py  async_client.py  client.py  exceptions.py  models.py
tests/: test_client_config.py  test_endpoints.py  test_live_integration.py  test_poll_status.py
